# CityShield

./: .env  .env.example  .env.example1  .firebaserc  .gcloudignore  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  firebase.json  pyproject.toml  skills-lock.json
.firebase/: hosting.Y29uc29sZVxkaXN0.cache
agents/: _gemini.py  correlation.py  incident_writer.py  orchestrator.py  planner.py
agents/prompts/: correlation_risk.md  incident_writer.md  response_planner.md
api/: main.py
compliance/: logger.py
console/: .env  index.html  package-lock.json  package.json
console/src/: api.ts  index.css  types.ts
console/src/components/: AssessmentPanel.tsx  CameraFeed.tsx  Dashboard.tsx  OperationsTab.tsx  SeverityBadge.tsx  SignalGauges.tsx  SignalsTab.tsx  StadiumMap.tsx
cv/: estimator.py  feeder.py
elastic/: client.py  ingest.py  mcp_client.py  surge_timeline.json  tools.py
tests/: test_ingest.py
